Makes the app switch attempts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WordleProMax</string>
     <string name="set_letter_test">Set</string>
+    <string name="q">Q</string>
 </resources>
