committing before a big change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WordleProMax</string>
     <string name="set_letter_test">Set</string>
     <string name="q">Q</string>
+    <string name="play_again">PLAY AGAIN</string>
 </resources>
